--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 .hour {
     position: absolute;
-    background-color: red;
+    background-color: black;
     width: 8px;
     height: 150px;
     top: 50px;
@@ -25,14 +25,9 @@
     animation-timing-function: linear;
 }
 
-@keyframes hourNeedle {
-  from {transform: rotate(0deg);}
-  to {transform: rotate(360deg);}
-}
-
 .minutes {
   position: absolute;
-  background-color: red;
+  background-color: black;
   width: 6px;
   height: 180px;
   top: 20px;
@@ -43,16 +38,40 @@
   animation-timing-function: linear;
 }
 
+.seconds {
+    position: absolute;
+    background-color: black;
+    width: 4px;
+    height: 200px;
+    top: 20px;
+    left: 200px;
+    border-radius: 3px;
+    animation: secondsNeedle 1s infinite;
+    transform-origin: bottom center;
+    animation-timing-function: linear;
+  }
+  
+  @keyframes secondsNeedle {
+    from {transform: rotate(0deg);}
+    to {transform: rotate(360deg);}
+  }
+
+
 @keyframes minuteNeedle {
   from {transform: rotate(0deg);}
   to {transform: rotate(360deg);}
 }
 
+@keyframes hourNeedle {
+    from {transform: rotate(0deg);}
+    to {transform: rotate(360deg);}
+  }
+  
 .circle {
   position: absolute;
   width: 50px;
   height: 50px;
-  background-color: rgb(255,0,0);
+  background-color: black;
   border-radius: 200px;
   left: 0;
   right: 0;
